# petrel

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  JUSTFILE_GUIDE.md  README.md  README_IDL.md  justfile  vcpkg.json
.github/workflows/: build-packages.yml
examples/: publisher.cpp  subscriber.cpp
include/: petrel.h
src/: client.cpp
